--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,5 @@
 title: MHHRI
 theme: jekyll-theme-cayman
 description: Mental Health and Human Rights Info
+baseurl: /hhri
+url: https://henkpb.github.io
