--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: MHHRI
 description: Mental Health and Human Rights Info
 baseurl: /hhri
-url: https://henkpb.github.io
+url: https://henkpb.github.io/hhri
 collections_dir: content
 collections:
   news:
