--- a/_data/footer.yml
+++ b/_data/footer.yml
@@ -3,14 +3,14 @@ about_text: "Mental Health and Human Rights Info is a resource database providin
 social_text: "Follow us:"
 social_links:
   - name: "Facebook"
-    icon: ""
+    icon: "&#xE90B;"
     link: "https://www.facebook.com/HealthandHumanRightsInfo/"
   - name: "Instagram"
-    icon: ""
+    icon: "&#xE917;"
     link: "https://www.instagram.com/mentalhealthandhumanrights/"
   - name: "Youtube"
-    icon: ""
+    icon: "&#xE933;"
     link: "https://www.youtube.com/channel/UCtSV7XK02eyayY-vpC3AuKA"
   - name: "LinkedIn"
-    icon: ""
+    icon: "&#xE936;"
     link: "https://www.linkedin.com/company/mental-health-and-human-rights-info/"    
