--- a/_data/menu.yml
+++ b/_data/menu.yml
@@ -5,7 +5,7 @@ manual_list:
     icon: "&#xE913;"
     link:
   - title: "Children"
-    icon: "&#xE90d;"
+    icon: "&#xE90D;"
     link:
   - title: "Boys and men"
     icon: "&#xE90F;"
