--- a/_data/footer.yml
+++ b/_data/footer.yml
@@ -1,16 +1,16 @@
 about_text: "Mental Health and Human Rights Info is a resource database providing free information about the consequences of human rights violations on mental health in the contexts of disaster, war and conflict."
 
-social_text: "Follow us:"
+social_title: "Follow us:"
 social_links:
-  - name: "Facebook"
+  - title: "Facebook"
     icon: "&#xE90B;"
     link: "https://www.facebook.com/HealthandHumanRightsInfo/"
-  - name: "Instagram"
+  - title: "Instagram"
     icon: "&#xE917;"
     link: "https://www.instagram.com/mentalhealthandhumanrights/"
-  - name: "Youtube"
+  - title: "Youtube"
     icon: "&#xE933;"
     link: "https://www.youtube.com/channel/UCtSV7XK02eyayY-vpC3AuKA"
-  - name: "LinkedIn"
+  - title: "LinkedIn"
     icon: "&#xE936;"
     link: "https://www.linkedin.com/company/mental-health-and-human-rights-info/"    
