--- a/_data/menu.yml
+++ b/_data/menu.yml
@@ -1,3 +1,5 @@
+topics: "manual, theme, resource, etraining"
+
 manual_title: "Training Manuals"
 manual_text: "For you who are working with or assisting survivors of gender-based violence or involved in training of helpers working directly with survivors."
 manual_list:
