--- a/_data/manual_women.yml
+++ b/_data/manual_women.yml
@@ -3,101 +3,77 @@ publications: "manual, toolbox, flyer"
 manual_title: "Women GBV Manual"
 manual_icon: "&#xE911;"
 manual_text: "The manual explains, among other things, how trauma affects mental health. It refers to methods and techniques that can be used to meet the psychological needs of women survivors of sexual abuse in contexts of war and conflict. The handbook can also be useful for people who already have knowledge and experience in the field."
-manual_view:
+manual_links:
   - language: "English"
-    link: "https://viewer.joomag.com/mental-health-and-gender-based-violence-2016/0467236001618345303?short&"
+    download: "https://www.hhri.org/wp-content/uploads/2019/01/HHRI_EN_GBV.pdf"
+    view: "https://viewer.joomag.com/mental-health-and-gender-based-violence-2016/0467236001618345303?short&"
   - language: "Spanish"
-    link: "https://viewer.joomag.com/spanish-mental-health-and-gender-based-violence/0336059001618385074?short&"
+    download: "https://www.hhri.org/wp-content/uploads/2019/01/hhri_es_v2.pdf"
+    view: "https://viewer.joomag.com/spanish-mental-health-and-gender-based-violence/0336059001618385074?short&"
   - language: "Russian"
-    link: "https://viewer.joomag.com/russian-mental-health-and-gender-based-violence-russian-version/0588272001504616112?short&"
+    download: "https://www.hhri.org/wp-content/uploads/2019/02/HHRI_RU_GBV.pdf"
+    view: "https://viewer.joomag.com/russian-mental-health-and-gender-based-violence-russian-version/0588272001504616112?short&"
   - language: "Arabic"
-    link: "https://viewer.joomag.com/arabic-mental-health-and-gender-based-violence-2016/0178758001618347203?short&"
+    download: "https://www.hhri.org/wp-content/uploads/2019/02/hhri_web_AR_HR.pdf"
+    view: "https://viewer.joomag.com/arabic-mental-health-and-gender-based-violence-2016/0178758001618347203?short&"
   - language: "Portuguese"
-    link: "https://viewer.joomag.com/portugese-mental-health-and-gender-based-violene-2019/0086832001602231052?short&"
+    download: "https://www.hhri.org/wp-content/uploads/2019/05/hhri_pt_web.pdf"
+    view: "https://viewer.joomag.com/portugese-mental-health-and-gender-based-violene-2019/0086832001602231052?short&"
   - language: "Nepalese"
-    link: "https://www.hhri.org/wp-content/uploads/2020/10/hhri_NP_web.pdf"
+    download: "https://www.hhri.org/wp-content/uploads/2020/10/hhri_NP_web.pdf"
+    view: "https://www.hhri.org/wp-content/uploads/2020/10/hhri_NP_web.pdf"
   - language: "Ukrainian"
-    link: "https://viewer.joomag.com/ukrainian-mental-health-and-gender-based-violene-2016/0178566001618434528?short&"
+    download: "https://www.hhri.org/wp-content/uploads/2020/10/hhri_ua_v3-Ukrainian.pdf"
+    view: "https://viewer.joomag.com/ukrainian-mental-health-and-gender-based-violene-2016/0178566001618434528?short&"
   - language: "Mongolian"
-    link: "https://www.hhri.org/wp-content/uploads/2022/03/Mogolsk-Manual.pdf"
+    download: "https://www.hhri.org/wp-content/uploads/2022/03/Mogolsk-Manual.pdf"
+    view: "https://www.hhri.org/wp-content/uploads/2022/03/Mogolsk-Manual.pdf"
   - language: "Norwegian"
-    link: "https://www.hhri.org/wp-content/uploads/2024/05/hhri_2020_women_NO_web-2024.pdf"
-manual_download:
-  - language: "English"
-    link: "https://www.hhri.org/wp-content/uploads/2019/01/HHRI_EN_GBV.pdf"
-  - language: "Spanish"
-    link: "https://www.hhri.org/wp-content/uploads/2019/01/hhri_es_v2.pdf"
-  - language: "Russian"
-    link: "https://www.hhri.org/wp-content/uploads/2019/02/HHRI_RU_GBV.pdf"
-  - language: "Arabic"
-    link: "https://www.hhri.org/wp-content/uploads/2019/02/hhri_web_AR_HR.pdf"
-  - language: "Portuguese"
-    link: "https://www.hhri.org/wp-content/uploads/2019/05/hhri_pt_web.pdf"
-  - language: "Nepalese"
-    link: "https://www.hhri.org/wp-content/uploads/2020/10/hhri_NP_web.pdf"
-  - language: "Ukrainian"
-    link: "https://www.hhri.org/wp-content/uploads/2020/10/hhri_ua_v3-Ukrainian.pdf"
-  - language: "Mongolian"
-    link: "https://www.hhri.org/wp-content/uploads/2022/03/Mogolsk-Manual.pdf"
-  - language: "Norwegian"
-    link: "https://www.hhri.org/wp-content/uploads/2024/05/hhri_2020_woman_norsk_p1.pdf"
+    download: "https://www.hhri.org/wp-content/uploads/2024/05/hhri_2020_woman_norsk_p1.pdf"
+    view: "https://www.hhri.org/wp-content/uploads/2024/05/hhri_2020_women_NO_web-2024.pdf"
 
 toolbox_title: "Women GBV Toolbox"
 toolbox_icon: "&#xE912;"
 toolbox_text: "The women GBV toolbox is a collection of the tools presented in the training manual. The intention is to give you a small sized, easy to handle sample. It contains grounding exercises, the story of the butterfly woman, window of tolerance and other tools."
-toolbox_view:
+toolbox_links:
   - language: "English"
-    link: "https://www.hhri.org/wp-content/uploads/2025/01/final-toolbox2025.pdf"
+    download: "https://www.hhri.org/wp-content/uploads/2025/01/final-toolbox2025.pdf"
+    view: "https://www.hhri.org/wp-content/uploads/2025/01/final-toolbox2025.pdf"
   - language: "Spanish"
-    link: "https://www.hhri.org/wp-content/uploads/2019/09/Toolbox-ES-2019-1.pdf"
+    download: "https://www.hhri.org/wp-content/uploads/2019/09/Toolbox-ES-2019-1.pdf"
+    view: "https://www.hhri.org/wp-content/uploads/2019/09/Toolbox-ES-2019-1.pdf"
   - language: "Korean"
-    link: "https://www.hhri.org/wp-content/uploads/2019/09/Toolbox-KO-2019.pdf"
+    download: "https://www.hhri.org/wp-content/uploads/2019/09/Toolbox-KO-2019.pdf"
+    view: "https://www.hhri.org/wp-content/uploads/2019/09/Toolbox-KO-2019.pdf"
   - language: "Romanian"
-    link: "https://www.hhri.org/wp-content/uploads/2019/09/Toolbox-RO-2019.pdf"
+    download: "https://www.hhri.org/wp-content/uploads/2019/09/Toolbox-RO-2019.pdf"
+    view: "https://www.hhri.org/wp-content/uploads/2019/09/Toolbox-RO-2019.pdf"
   - language: "Georgian"
-    link: "https://www.hhri.org/wp-content/uploads/2019/01/toolbox_ge2017.pdf"
+    download: "https://www.hhri.org/wp-content/uploads/2019/01/toolbox_ge2017.pdf"
+    view: "https://www.hhri.org/wp-content/uploads/2019/01/toolbox_ge2017.pdf"
   - language: "Turkish"
-    link: "https://www.hhri.org/wp-content/uploads/2019/09/3Ruh-Sagl%C4%B1g%CC%86%C4%B1-ve-Cinsiyete-Dayal%C4%B1-S%CC%A7iddet.pdf"
+    download: "https://www.hhri.org/wp-content/uploads/2019/09/3Ruh-Saglığı-ve-Cinsiyete-Dayalı-Şiddet.pdf"
+    view: "https://www.hhri.org/wp-content/uploads/2019/09/3Ruh-Sagl%C4%B1g%CC%86%C4%B1-ve-Cinsiyete-Dayal%C4%B1-S%CC%A7iddet.pdf"
   - language: "Indonesian"
-    link: "https://www.hhri.org/wp-content/uploads/2019/12/Indo-toolbox2019.pdf"
+    download: "https://www.hhri.org/wp-content/uploads/2019/12/Indo-toolbox2019.pdf"
+    view: "https://www.hhri.org/wp-content/uploads/2019/12/Indo-toolbox2019.pdf"
   - language: "Ukrainian"
-    link: "https://www.hhri.org/wp-content/uploads/2020/10/22.6.final-toolbox2020_UA_edited.pdf"
+    download: "https://www.hhri.org/wp-content/uploads/2020/10/22.6.final-toolbox2020_UA_edited.pdf"
+    view: "https://www.hhri.org/wp-content/uploads/2020/10/22.6.final-toolbox2020_UA_edited.pdf"
   - language: "Norwegian"
-    link: "https://www.hhri.org/wp-content/uploads/2021/01/Endelig2021Norsk-toolbox-RVTS.pdf"
-toolbox_download:
-  - language: "English"
-    link: "https://www.hhri.org/wp-content/uploads/2025/01/final-toolbox2025.pdf"
-  - language: "Spanish"
-    link: "https://www.hhri.org/wp-content/uploads/2019/09/Toolbox-ES-2019-1.pdf"
-  - language: "Korean"
-    link: "https://www.hhri.org/wp-content/uploads/2019/09/Toolbox-KO-2019.pdf"
-  - language: "Romanian"
-    link: "https://www.hhri.org/wp-content/uploads/2019/09/Toolbox-RO-2019.pdf"
-  - language: "Georgian"
-    link: "https://www.hhri.org/wp-content/uploads/2019/01/toolbox_ge2017.pdf"
-  - language: "Turkish"
-    link: "https://www.hhri.org/wp-content/uploads/2019/09/3Ruh-Saglığı-ve-Cinsiyete-Dayalı-Şiddet.pdf"
-  - language: "Indonesian"
-    link: "https://www.hhri.org/wp-content/uploads/2019/12/Indo-toolbox2019.pdf"
-  - language: "Ukrainian"
-    link: "https://www.hhri.org/wp-content/uploads/2020/10/22.6.final-toolbox2020_UA_edited.pdf"
-  - language: "Norwegian"
-    link: "https://www.hhri.org/wp-content/uploads/2020/10/22.6.final-toolbox2020_UA_edited.pdf"
+    download: "https://www.hhri.org/wp-content/uploads/2020/10/22.6.final-toolbox2020_UA_edited.pdf"
+    view: "https://www.hhri.org/wp-content/uploads/2021/01/Endelig2021Norsk-toolbox-RVTS.pdf"
 
 flyer_title: "Women GBV Flyer"
 flyer_icon: "&#xE90C;"
 flyer_text: "The manual is designed for those who work with or come into contact with women who may have been subjected to sexual violence in connection with acts of war, flight or in the country of reception. In addition to the manual, we introduce the GBV manual flyer."
-flyer_view:
+flyer_links:
   - language: "English"
-    link: "https://www.hhri.org/wp-content/uploads/2019/01/HHRI-GBV-Manual-flyer.pdf"
+    download: "https://www.hhri.org/wp-content/uploads/2019/01/HHRI-GBV-Manual-flyer.pdf"
+    view: "https://www.hhri.org/wp-content/uploads/2019/01/HHRI-GBV-Manual-flyer.pdf"
   - language: "Spanish"
-    link: "https://www.hhri.org/wp-content/uploads/2019/01/HHRI-GBV-manual-flyer-spanish.pdf"
+    download: "https://www.hhri.org/wp-content/uploads/2019/01/HHRI-GBV-manual-flyer-spanish.pdf"
+    view: "https://www.hhri.org/wp-content/uploads/2019/01/HHRI-GBV-manual-flyer-spanish.pdf"
   - language: "Portuguese"
-    link: "https://www.hhri.org/wp-content/uploads/2019/01/GBV-flyer-portugisisk.pdf"
-flyer_view:
-  - language: "English"
-    link: "https://www.hhri.org/wp-content/uploads/2019/01/HHRI-GBV-Manual-flyer.pdf"
-  - language: "Spanish"
-    link: "https://www.hhri.org/wp-content/uploads/2019/01/HHRI-GBV-manual-flyer-spanish.pdf"
-  - language: "Portuguese"
-    link: "https://www.hhri.org/wp-content/uploads/2019/01/GBV-flyer-portugisisk.pdf"
+    download: "https://www.hhri.org/wp-content/uploads/2019/01/GBV-flyer-portugisisk.pdf"
+    view: "https://www.hhri.org/wp-content/uploads/2019/01/GBV-flyer-portugisisk.pdf"
