--- a/_data/manual_men.yml
+++ b/_data/manual_men.yml
@@ -13,7 +13,7 @@ manual_links:
   - language: "Spanish"
     download: "https://www.hhri.org/wp-content/uploads/2023/10/HHRI_men_Spanish_web.pdf"
     view: "https://www.hhri.org/wp-content/uploads/2023/10/HHRI_men_Spanish_web.pdf"
-  - language: "Nepalese"
+  - language: "Nepali"
     download: "https://www.hhri.org/wp-content/uploads/2024/11/HHRI_Men_Nepali_web.pdf"
     view: "https://www.hhri.org/wp-content/uploads/2024/11/HHRI_Men_Nepali_web.pdf"
 
