--- a/_data/manual_women.yml
+++ b/_data/manual_women.yml
@@ -19,7 +19,7 @@ manual_links:
   - language: "Portuguese"
     download: "https://www.hhri.org/wp-content/uploads/2019/05/hhri_pt_web.pdf"
     view: "https://viewer.joomag.com/portugese-mental-health-and-gender-based-violene-2019/0086832001602231052?short&"
-  - language: "Nepalese"
+  - language: "Nepali"
     download: "https://www.hhri.org/wp-content/uploads/2020/10/hhri_NP_web.pdf"
     view: "https://www.hhri.org/wp-content/uploads/2020/10/hhri_NP_web.pdf"
   - language: "Ukrainian"
