--- a/_data/manual_children.yml
+++ b/_data/manual_children.yml
@@ -13,7 +13,7 @@ manual_links:
   - language: "Ukrainian"
     download: "https://www.hhri.org/wp-content/uploads/2023/10/HHRI_children_UKR_web.pdf"
     view: "https://www.hhri.org/wp-content/uploads/2023/10/HHRI_children_UKR_web.pdf"
-  - language: "Nepalese"
+  - language: "Nepali"
     download: "https://www.hhri.org/wp-content/uploads/2023/10/HHRI_children_Nepali_Sept.pdf"
     view: "https://www.hhri.org/wp-content/uploads/2023/10/HHRI_children_Nepali_Sept.pdf"
 
