--- a/_data/manual_women.yml
+++ b/_data/manual_women.yml
@@ -77,3 +77,55 @@ flyer_links:
   - language: "Portuguese"
     download: "https://www.hhri.org/wp-content/uploads/2019/01/GBV-flyer-portugisisk.pdf"
     view: "https://www.hhri.org/wp-content/uploads/2019/01/GBV-flyer-portugisisk.pdf"
+
+details_title: "This Manual"
+details_menu:
+  - title: About this manual
+    link: "https://www.hhri.org/women-manual/about-manual/"
+  - title: Resources
+    link: https://www.hhri.org/women-manual/resources/
+    submenu:
+      - title: "Use of symbols and metaphors"
+        link: "https://www.hhri.org/women-manual/resources/use-of-symbols/"
+      - title: "The Butterfly Woman Survivor"
+        link: "https://www.hhri.org/women-manual/resources/the-butterfly-woman/"
+      - title: "Grounding exercises"
+        link: "https://www.hhri.org/women-manual/resources/grounding-experiences/"
+      - title: "Human rights approach"
+        link: "https://www.hhri.org/women-manual/resources/human-rights-approach/"
+      - title: "Helping the helpers"
+        link: "https://www.hhri.org/women-manual/resources/helping-the-helpers/"
+  - title: Do it yourself"
+    link: "https://www.hhri.org/women-manual/diy/"
+    submenu:
+      - title: "How to prepare"
+        link: "https://www.hhri.org/women-manual/diy/how-to-prepare/"
+      - title: "Practical guidelines"
+        link: "https://www.hhri.org/women-manual/diy/practical-guidelines/"
+      - title: Agenda template"
+        link: "https://www.hhri.org/women-manual/diy/agenda-template/"
+      - title: "Follow up"
+        link: "https://www.hhri.org/women-manual/diy/follow-up/"
+  - title: "Pilots"
+    link: "https://www.hhri.org/women-manual/pilots/"
+    submenu:
+        - title: "Cambodia"
+          link: "https://www.hhri.org/women-manual/pilots/cambodia/"
+        - title: "Jordan"
+          link: "https://www.hhri.org/women-manual/pilots/jordan/"
+        - title: "Norway"
+          link: "https://www.hhri.org/women-manual/pilots/norway/"
+        - title: "Turkey"
+          link: "https://www.hhri.org/women-manual/pilots/turkey/"
+        - title: "Colombia"
+          link: "https://www.hhri.org/women-manual/pilots/colombia/"
+  - title: "Tutorials"
+    link: "https://www.hhri.org/women-manual/resources/tutorials/"
+  - title: "Lectures"
+    link: "https://www.hhri.org/lectures/"
+  - title: "Grounding and the Window of Tolerance"
+    link: "https://www.hhri.org/understanding-how-we-react-to-stress-and-trauma-the-window-of-tolerance/"
+  - title: "GBV Training Manuals"
+    link: "https://www.hhri.org/gbv-training-manuals/"
+  - title: "GBV Online E-Training"
+    link: "https://www.hhri.org/onlineetraining/"
