--- a/_data/manual_women.yml
+++ b/_data/manual_women.yml
@@ -95,14 +95,14 @@ details_menu:
         link: "https://www.hhri.org/women-manual/resources/human-rights-approach/"
       - title: "Helping the helpers"
         link: "https://www.hhri.org/women-manual/resources/helping-the-helpers/"
-  - title: Do it yourself"
+  - title: "Do it yourself"
     link: "https://www.hhri.org/women-manual/diy/"
     submenu:
       - title: "How to prepare"
         link: "https://www.hhri.org/women-manual/diy/how-to-prepare/"
       - title: "Practical guidelines"
         link: "https://www.hhri.org/women-manual/diy/practical-guidelines/"
-      - title: Agenda template"
+      - title: "Agenda template"
         link: "https://www.hhri.org/women-manual/diy/agenda-template/"
       - title: "Follow up"
         link: "https://www.hhri.org/women-manual/diy/follow-up/"
